# TeleAgent

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  REPOSITORY_SETUP.md  SECURITY.md  install.sh  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
examples/: fake_cli.py  teleagent.toml
teleagent/: __init__.py  __main__.py  telegram.py  wrapper.py
tests/: test_smoke.py
