[project]
name = "teleagent"
version = "0.1.0"
description = "Bridge interactive AI CLI agents to Telegram with PTY automation."
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "TeleAgent contributors" },
]
keywords = [
  "cli",
  "telegram",
  "terminal",
  "codex",
  "claude",
  "kimi",
  "agent",
  "automation",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Communications :: Chat",
  "Topic :: Software Development",
  "Topic :: System :: Shells",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/woguaiwo/TeleAgent"
Repository = "https://github.com/woguaiwo/TeleAgent"
Issues = "https://github.com/woguaiwo/TeleAgent/issues"

[project.scripts]
teleagent = "teleagent.__main__:main"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["teleagent", "teleagent.*"]
exclude = ["teleagent-debug-runs", "teleagent-debug-runs.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
